--- a/f5-demo-app-route-service.yaml
+++ b/f5-demo-app-route-service.yaml
@@ -77,3 +77,19 @@ spec:
             targetPort: 443
     selector:
         app: f5-demo-app-route-passthrough-ssl
+---
+apiVersion: v1
+kind: Service
+metadata:
+    name: f5-demo-app-route-waf
+    labels:
+        name: f5-demo-app-route-waf
+    namespace: f5demo
+spec:
+    type: ClusterIP
+    ports:
+        -
+            port: 443
+            targetPort: 443
+    selector:
+        app: f5-demo-app-route-waf
