--- a/f5-demo-app-route-deployment.yaml
+++ b/f5-demo-app-route-deployment.yaml
@@ -105,3 +105,21 @@ spec:
         ports:
         - containerPort: 8080
           protocol: TCP
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: f5-demo-app-route-edge-ssl-waf
+spec:
+  replicas: 4
+  template:
+    metadata:
+      labels:
+        app: f5-demo-app-route-edge-ssl-waf
+    spec:
+      containers:
+      - name: f5-demo-app-route
+        image: f5devcentral/f5-hello-world
+        ports:
+        - containerPort: 8080
+          protocol: TCP
