--- a/f5-vs-as3-override.yaml
+++ b/f5-vs-as3-override.yaml
@@ -5,17 +5,18 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: f5-route-vs-override
-  namespace: kube-system
+  namespace: f5demo
 data:
   override.json: |
     {
       "declaration": {
-        "test_AS3": {
+        "openshift_AS3": {
           "Shared": {
             "https_ose_vserver": {
-              "persistenceMethods": [],
-              "virtualAddresses": [
-                "172.16.3.100"
+              "securityLogProfiles": [
+                {
+                  "bigip": "/Common/Log all requests"
+                }
               ],
               "profileHTTP": {
                 "bigip": "/Common/http"
