--- a/f5-vs-as3-override.yaml
+++ b/f5-vs-as3-override.yaml
@@ -8,25 +8,21 @@ metadata:
   namespace: f5demo
 data:
   override.json: |
-    {
-      "declaration": {
-        "openshift_AS3": {
-          "Shared": {
-            "https_ose_vserver": {
-              "securityLogProfiles": [
-                {
-                  "bigip": "/Common/Log all requests"
-                }
-              ]
-            },
-            "ose_vserver": {
-              "securityLogProfiles": [
-                {
-                  "bigip": "/Common/Log all requests"
-                }
-              ]
-            }
+  {
+    "declaration": {
+      "openshift_AS3": {
+        "Shared": {
+          "https_ose_vserver": {
+            "securityLogProfiles": [{
+              "bigip": "/Common/Log all requests"
+            }]
+          },
+          "ose_vserver": {
+            "securityLogProfiles": [{
+              "bigip": "/Common/Log all requests"
+            }]
           }
         }
       }
     }
+  }
