--- a/f5-vs-as3-override.yaml
+++ b/f5-vs-as3-override.yaml
@@ -7,7 +7,7 @@ metadata:
   name: f5-route-vs-override
   namespace: f5demo
 data:
-  override.json: |
+  template: |
   {
     "declaration": {
       "openshift_AS3": {
