--- a/yosef/f5-override-as3-declaration.yaml
+++ b/yosef/f5-override-as3-declaration.yaml
@@ -14,6 +14,11 @@ data:
                 {
                   "bigip": "/Common/PROF_LOG_ASM_ALL_BOT_ALL_DOS_ALL"
                 }
+              ],
+              "snatpool": [
+                {
+                  "bigip": "/Common/RD_000_SNATPOOL_GENERIC"
+                }
               ]
             }
           }
