--- a/f5-vs-as3-override.yaml
+++ b/f5-vs-as3-override.yaml
@@ -12,16 +12,19 @@ data:
         "declaration": {
           "openshift_AS3": {
             "Shared": {
-              "https_ose_vserver": {},
+              "https_ose_vserver": {
+                "securityLogProfiles": [
+                  {
+                    "bigip": "/Common/Log all requests"
+                  }
+                ]
+              },
               "ose_vserver": {
                 "securityLogProfiles": [
                   {
                     "bigip": "/Common/Log all requests"
                   }
-                ],
-                "snat": {
-                  "bigip": "/Common/RD_000_SNATPOOL_GENERIC"
-                }
+                ]
               }
             }
           }
