--- a/f5-vs-as3-override.yaml
+++ b/f5-vs-as3-override.yaml
@@ -25,9 +25,11 @@ data:
                   "bigip": "/Common/Log all requests"
                 }
               ],
-              "iRule": {
-                "bigip": "/Common/https_redirect"
-              }
+              "iRule": [
+                {
+                  "bigip": "/Common/https_redirect"
+                }
+              ]
             }
           }
         }
