--- a/f5-k8s-bigip-ctlr-openshift.yaml
+++ b/f5-k8s-bigip-ctlr-openshift.yaml
@@ -16,7 +16,7 @@
         serviceAccountName: bigip-ctlr
         containers:
           - name: k8s-bigip-ctlr
-            image: amit49g/k8s-bigip-ctlr:rel12_build_14
+            image: f5networks/k8s-bigip-ctlr:1.12.0
             env:
               - name: BIGIP_USERNAME
                 valueFrom:
