--- a/yosef/f5-override-as3-declaration.yaml
+++ b/yosef/f5-override-as3-declaration.yaml
@@ -11,18 +11,51 @@ data:
           "Shared": {
             "RD_000_VS_STD_APPAOTEL1_443": {
               "profileHTTP": {
-                "bigip": "/Common/http"
+                "bigip": "/Common/PROF_HTTP_REDIRECT_HSTS_XFF"
               },
               "profileTCP": {
-                "bigip": "/Common/tcp"
+                "ingress": {
+                  "bigip": "/Common/PROF_TCP_WANOPTIMIZED_KEEPALIVE_120_NONAGLE"
+                },
+                "egress": {
+                  "bigip": "/Common/PROF_TCP_LANOPTIMIZED_KEEPALIVE_120"
+                }
               },
               "securityLogProfiles": [
-                {
-                  "bigip": "/Common/Log all requests"
-                }
+              {
+                "bigip": "/Common/Log all requests"
+              }
               ],
               "snat": {
                 "bigip": "/Common/RD_000_SNATPOOL_GENERIC"
+              },
+              "iRules": [
+              {
+                "bigip": "/appaotel1_AS3/Shared/http_redirect_irule"
+              },
+              {
+                "bigip": "/Common/_sys_APM_ExchangeSupport_helper"
+              }
+              ],
+              "persistenceMethods": [
+              {
+                "bigip": "/Common/PROF_PERSIST_COOKIE_SESSION_VS080158046211"
+              }
+              ],
+              "lastHop": "disable",
+              "profileAnalytics": {
+                "bigip": "/Common/PROF_ANALYTICS_HTTP_CUSTOMIZED"
+              },
+              "profileDOS": {
+                "bigip": "/Common/PROF_WAF_BOT_DEFENSE_RELAXED"
+              },
+              "allowVlans": [
+              {
+                "bigip": "/Common/RD_000_VLAN_EXT"
+              }
+              ],
+              "profileAnalytics": {
+                "bigip": "/Common/PROF_ANALYTICS_HTTP_CUSTOMIZED"
               }
             }
           }
