--- a/bigip ha deployment/f5-k8s-bigip-ctlr-openshift-ose-bigip-02.yaml
+++ b/bigip ha deployment/f5-k8s-bigip-ctlr-openshift-ose-bigip-02.yaml
@@ -16,7 +16,7 @@
         serviceAccountName: bigip-ctlr
         containers:
           - name: k8s-bigip-ctlr
-            image: f5networks/k8s-bigip-ctlr:1.12.0
+            image: amit49g/k8s-bigip-ctlr:tsys-1.13-cf-1
             env:
               - name: BIGIP_USERNAME
                 valueFrom:
