--- a/f5-demo-app-route-ab.yaml
+++ b/f5-demo-app-route-ab.yaml
@@ -1,20 +1,22 @@
-  apiVersion: v1
-  kind: Route
-  metadata:
+apiVersion: v1
+kind: Route
+metadata:
     labels:
-      name: f5-demo-app-route-ab
+        name: f5-demo-app-route-ab
     name: f5-demo-app-route-ab
     namespace: f5demo
-  spec:
+spec:
     host: mysite.f5demo.com
-    path: "/"
+    path: /
     port:
-      targetPort: 8080
+        targetPort: 8080
     to:
-    - kind: Service
-      name: f5-demo-app-route-basic
-      weight: 20
+        -
+            kind: Service
+            name: f5-demo-app-route-basic
+            weight: 20
     alternateBackends:
-    - kind: Service
-      name: f5-demo-app-route-balance
-      weight: 10
+        -
+            kind: Service
+            name: f5-demo-app-route-basic
+            weight: 10
