--- a/yosef/f5-override-as3-declaration.yaml
+++ b/yosef/f5-override-as3-declaration.yaml
@@ -56,6 +56,9 @@ data:
               ],
               "profileAnalytics": {
                 "bigip": "/Common/PROF_ANALYTICS_HTTP_CUSTOMIZED"
+              },
+              "profileBotDefense": {
+                "bigip": "/Common/bot-defense"
               }
             }
           }
