--- a/enviroment/standalone/big-ip-83/f5-k8s-bigip-ctlr-openshift.yaml
+++ b/enviroment/standalone/big-ip-83/f5-k8s-bigip-ctlr-openshift.yaml
@@ -16,7 +16,7 @@
         serviceAccountName: bigip-ctlr
         containers:
           - name: k8s-bigip-ctlr
-            image: f5networks/k8s-bigip-ctlr:1.12.0
+            image: f5networks/k8s-bigip-ctlr:1.14.0
             env:
               - name: BIGIP_USERNAME
                 valueFrom:
@@ -51,7 +51,7 @@
               "--log-level=DEBUG",
               "--log-as3-response=true",
               # AS3 override functionality
-              "--override-as3-declaration=f5demo/f5-route-vs-override",
+              #"--override-as3-declaration=f5demo/f5-route-vs-override",
               # Self-signed cert
               "--insecure=true",
               "--agent=as3"
