--- a/enviroment/standalone/big-ip-83/f5-k8s-bigip-ctlr-openshift.yaml
+++ b/enviroment/standalone/big-ip-83/f5-k8s-bigip-ctlr-openshift.yaml
@@ -16,7 +16,7 @@
         serviceAccountName: bigip-ctlr
         containers:
           - name: k8s-bigip-ctlr
-            image: f5networks/k8s-bigip-ctlr:2.0.0
+            image: subbuv26/k8s-bigip-ctlr:crd_integrate
             env:
               - name: BIGIP_USERNAME
                 valueFrom:
