--- a/enviroment/migration/cccl 2.0/f5-k8s-bigip-ctlr-openshift-ose-bigip-02.yaml
+++ b/enviroment/migration/cccl 2.0/f5-k8s-bigip-ctlr-openshift-ose-bigip-02.yaml
@@ -49,6 +49,7 @@
               "--route-vserver-addr=10.192.75.107",
               # Logging level
               "--log-level=DEBUG",
+              "--agent=cccl",
               ]
         imagePullSecrets:
           - name: f5-docker-images
