--- a/cluster/cis/f5-bigip-01-deployment.yaml
+++ b/cluster/cis/f5-bigip-01-deployment.yaml
@@ -1,21 +1,21 @@
   apiVersion: apps/v1
   kind: Deployment
   metadata:
-    name: f5-ose-bigip-01-ctrl
+    name: f5-bigip-ctrl-01
     namespace: kube-system
   spec:
     replicas: 1
     template:
       metadata:
-        name: k8s-bigip-ctlr
+        name: f5-bigip-ctrl-01
         labels:
-          app: k8s-bigip-ctlr
+          app: f5-bigip-ctrl-01
       spec:
         # Name of the Service Account bound to a Cluster Role with the required
         # permissions
         serviceAccountName: bigip-ctlr
         containers:
-          - name: k8s-bigip-ctlr
+          - name: f5-bigip-ctrl-01
             image: registry.connect.redhat.com/f5networks/cntr-ingress-svcs:latest
             env:
               - name: BIGIP_USERNAME
