--- a/high-availability/bigip ha deployment/f5-k8s-bigip-ctlr-openshift-ose-bigip-01.yaml
+++ b/high-availability/bigip ha deployment/f5-k8s-bigip-ctlr-openshift-ose-bigip-01.yaml
@@ -1,7 +1,7 @@
   apiVersion: extensions/v1beta1
   kind: Deployment
   metadata:
-    name: f5-ose-bigip-01-ctrl
+    name: 8s-bigip-ctlr
     namespace: kube-system
   spec:
     replicas: 1
