--- a/cluster/cis/f5-bigip-02-deployment.yaml
+++ b/cluster/cis/f5-bigip-02-deployment.yaml
@@ -1,4 +1,4 @@
-  apiVersion: extensions/v1beta1
+  apiVersion: apps/v1
   kind: Deployment
   metadata:
     name: f5-bigip-02
@@ -16,7 +16,7 @@
         serviceAccountName: bigip-ctlr
         containers:
           - name: cntr-ingress-svcs
-            image: f5networks/cntr-ingress-svcs
+            image: registry.connect.redhat.com/f5networks/cntr-ingress-svcs:latest
             env:
               - name: BIGIP_USERNAME
                 valueFrom:
