--- a/cluster/cis/f5-bigip-02-deployment.yaml
+++ b/cluster/cis/f5-bigip-02-deployment.yaml
@@ -7,9 +7,9 @@
     replicas: 1
     template:
       metadata:
-        name: k8s-bigip-ctlr
+        name: f5-bigip-02
         labels:
-          app: k8s-bigip-ctlr
+          app: f5-bigip-02
       spec:
         # Name of the Service Account bound to a Cluster Role with the required
         # permissions
