--- a/cluster/cis/f5-bigip-02-deployment.yaml
+++ b/cluster/cis/f5-bigip-02-deployment.yaml
@@ -1,22 +1,22 @@
-  apiVersion: apps/v1
+apiVersion: apps/v1
   kind: Deployment
   metadata:
-    name: k8s-bigip-ctlr-deployment
+    name: f5-server
     namespace: kube-system
   spec:
     replicas: 1
     template:
       metadata:
-        name: k8s-bigip-ctlr-deployment
+        name: k8s-bigip-ctlr
         labels:
-          app: k8s-bigip-ctlr-deployment
+          app: k8s-bigip-ctlr
       spec:
         # Name of the Service Account bound to a Cluster Role with the required
         # permissions
         serviceAccountName: bigip-ctlr
         containers:
-          - name: cntr-ingress-svcs
-            image: registry.connect.redhat.com/f5networks/cntr-ingress-svcs:latest
+          - name: k8s-bigip-ctlr
+            image: f5networks/k8s-bigip-ctlr:latest
             env:
               - name: BIGIP_USERNAME
                 valueFrom:
@@ -37,22 +37,28 @@
               "--bigip-username=$(BIGIP_USERNAME)",
               "--bigip-password=$(BIGIP_PASSWORD)",
               # Replace with the IP address or hostname of your BIG-IP device
-              "--bigip-url=192.168.200.83",
+              "--bigip-url=10.10.10.20",
               # Replace with the name of the BIG-IP partition you want to manage
               "--bigip-partition=openshift",
+              # Replace with service type - cluster or nodeport
               "--pool-member-type=cluster",
               # Replace with the path to the BIG-IP VXLAN connected to the
               # OpenShift HostSubnet
               "--openshift-sdn-name=/Common/openshift_vxlan",
+              # set manage-routes TRUE to manage routes
               "--manage-routes=true",
+              # set manage-configmaps TRUE to manage config maps
+              "--manage-configmaps=true",
+              # set the namespace for CIS to watch.
               "--namespace=f5demo",
               "--route-vserver-addr=10.192.75.107",
               # Logging level
               "--log-level=DEBUG",
               "--log-as3-response=true",
+              # AS3 override functionality, Refer docs for more info
+              "--override-as3-declaration=f5demo/f5-route-vs-override",
               # Self-signed cert
-              "--insecure=true",
-              "--agent=as3"
+              "--insecure=true"
               ]
         imagePullSecrets:
           - name: f5-docker-images
