--- a/standalone-ovn/openshift/ocp-exgw.yaml
+++ b/standalone-ovn/openshift/ocp-exgw.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ocp-exgw
+  name: default
   annotations:
-    k8s.ovn.org/hybrid-overlay-external-gw: 10.142.2.60 #self ip of vxlan tunnel
-    k8s.ovn.org/hybrid-overlay-vtep: 10.192.125.60 #BIG-IP interface address routable to the openshift nodes
+    k8s.ovn.org/hybrid-overlay-external-gw: 10.142.2.60 #self ip of Vxlan tunnel
+    k8s.ovn.org/hybrid-overlay-vtep: 10.192.125.60 #BIG-IP interface address rotatable to the OpenShift nodes
